--- a/css/mob_hrz.css
+++ b/css/mob_hrz.css
@@ -1,13 +1,14 @@
 .txt {
-    display: block;
-    grid-template-columns: 1fr 1fr;
+    display: grid;
+    grid-template-columns: 1fr 4fr 4fr 1fr;
     padding: 20px;
     text-align: center;
 }
 
 .txts {
     font-size: large;
-    height: 200px;
+    width: 100%;
+    height: 300px;
     resize: none;
     color: black;
     outline: none;
@@ -17,9 +18,8 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+
 #botoes{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     justify-content: center;
     text-align: center;    
 }
