--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,6 +17,20 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+.alerta {
+    display: grid;
+    grid-template-columns: 1fr;
+    color: #576867;
+    grid-gap: 10px;
+}
+.alerta1 {
+    display: flex;
+    justify-content: center;
+}
+.alerta2 {
+    display: flex;
+    justify-content: center;
+}
 #botoes{
     display: grid;
     grid-template-columns: 1fr 1fr;
