--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ body {
 .txts {
     font-size: large;
     width: 100%;
-    height: 400px;
     resize: none;
     color: black;
     outline: none;
@@ -43,19 +42,16 @@ body {
 .alerta {
     display: flex;
     color: #576867;
-    grid-gap: 10px;
+    grid-gap: 20px;
     justify-content: center;
-    
 }
 .alerta1 {
     display: flex;
-    justify-content: center;
-    align-items:baseline;    
+     align-items: center;
 }
 .alerta2 {
     display: flex;
-    justify-content: center;
-    align-items: baseline;
+    align-items: center;
 }
 #linkAlura {
     color: #576867;
@@ -94,14 +90,24 @@ body {
     text-transform: uppercase;
     color: #576867;
 }
-#tecnologias {
-    padding: 5px;
+#tecs {
     display: flex;
-    justify-content: center;
+    justify-content:space-evenly;
     align-items: center;
     color: #576867;
-    grid-gap: 30px;
     padding-bottom: 150px;
+}
+.tec1 {
+    display: flex;
+    align-items:baseline;
+}
+.tec2 {
+    display: flex;
+    align-items: baseline;
+}
+.tec3 {
+    display: flex;
+    align-items: baseline;
 }
 #meusLinks {
     padding: 20px;
