--- a/css/style.css
+++ b/css/style.css
@@ -62,19 +62,17 @@ body {
     display: flex;
     justify-content: center;
     text-align: center;   
-    margin-bottom: 10px; 
 }
 .btns { 
     background-color: #576867;
     border: none;
     color: white;
     padding: 10px 25px;
-    text-align: center;
     text-decoration: none;
     font-size: 13px;
     font-family: 'Share Tech Mono', monospace;
     letter-spacing: 0.1rem;
-    margin: 4px 10px;
+    margin: 10px;
     cursor: pointer;
     text-transform: uppercase;
     border-radius: 5px;   
