--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,13 @@ body {
     margin: 0;
     background: #d7e5e2;
 }
-.barraSuperior {
+#barraSuperior {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     background: #576867;
     justify-items: center;
-    align-items: center; 
+    align-items: center;
+    padding: 15px;
 }
 #titulo {
     color: white;
@@ -21,6 +22,7 @@ body {
     overflow: hidden;
     text-align: center;
     user-select: none;
+    font-size: 1.5em;
     
 }
 .typing-animation {    
@@ -28,7 +30,7 @@ body {
 }
 @keyframes typing {
     from{
-        width: 0;
+        width: 0em;
     }
     to {
         width: 11.5rem;
@@ -52,7 +54,7 @@ body {
     user-select: none;
     color: red;
 }
-.txt {
+#txt {
     display: grid;
     grid-template-columns:1fr 1fr;
     padding: 20px;
@@ -72,31 +74,27 @@ body {
     border-radius: 10px;
     padding-bottom: 50px;
 }
-.alerta {
+#botoes{
+    padding: 20px;
+    justify-content: center;
+    text-align: center;   
+}
+#alerta {
     padding-top: 20px;
     display: flex;
     color: #576867;
     grid-gap: 20px;
     justify-content: center;
 }
-.alerta1 {
+#alerta1 {
     display: flex;
      align-items: center;
      justify-content: center;
 }
-.alerta2 {
+#alerta2 {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-#linkAlura {
-    color: #576867;
-    text-decoration: none;
-}
-#botoes{
-    padding: 20px;
-    justify-content: center;
-    text-align: center;   
 }
 .btns { 
     background-color: #576867;
@@ -121,7 +119,7 @@ hr {
     margin-top: 20px;
 }
 #txtTec {
-    padding-top: 40px;
+    padding-top: 50px;
     padding-bottom: 40px;
     display: flex;
     justify-content: center;
@@ -133,15 +131,12 @@ hr {
     display: flex;
     justify-content:space-evenly;
     align-items: center;
-    color: #576867;
-    padding-bottom: 150px;
-}
-.tec {
-    display: grid;
     text-align: center;
+    color: #576867;
+    padding-bottom: 130px;
 }
 #meusLinks {
-    padding: 30px;
+    padding: 15px;
     display: flex;
     background: #576867;
     justify-content: center;
@@ -151,13 +146,14 @@ hr {
     color: #576867;
 }
 .corBranca {
-    color: aliceblue;
+    color: #ffffff;
 }
 @media screen and (max-width: 800px) {
+
     #troca {
         display: grid;
     }
-    .alerta {
+    #alerta {
         order: 2;
     }
     #botoes {
